change page title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coding Luang</title>
 </head>
 <body>
-    <h1 style="font-size: 80px;">lorem</h1>
+    <h1 style="font-size: 80px;"></h1>
     <h2>lorem</h2>
     <h3>lorem</h3>
     <h4>lorem</h4>
