add basic structure on index

--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <title>Coding Luang</title>
 </head>
 <body>
-    <h1 style="font-size: 80px;"></h1>
-    <h2>lorem</h2>
-    <h3>lorem</h3>
-    <h4>lorem</h4>
-    <h5>lorem</h5>
-    <h6>lorem</h6>
-
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.
+<header>
+    <img src=".\assets\img\site-icon.png" alt="">
+    <ul>
+        <li class="nav-link">Inicio</li>
+        <li class="nav-link">Meio</li>
+        <li class="nav-link">Fim</li>
+    </ul>
+</header>
+<section>
+    <img src="https://wallpaperaccess.com/full/1318799.jpg" alt="">
+    <div id="box-banner" class="box-banner">
+        <h1>Primeiro projeto</h1>
+        <h2>Esse projeto serve como base para estudos</h2>
+    </div>
+    <a href="#">Saiba mais</a>
+</section>
+<div>
+    
+</div>
 </body>
 </html>
