adiciona classe e imagem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coding Luang</title>
 </head>
 <body>
-<header>
+<header class="header">
     <img src=".\assets\img\site-icon.png" alt="">
     <ul>
         <li class="nav-link">Inicio</li>
@@ -14,16 +14,19 @@
         <li class="nav-link">Fim</li>
     </ul>
 </header>
-<section>
-    <img src="https://wallpaperaccess.com/full/1318799.jpg" alt="">
+<section class="banner_main">
+    <img src="./assets/img/forest.jpg" alt="">
     <div id="box-banner" class="box-banner">
-        <h1>Primeiro projeto</h1>
-        <h2>Esse projeto serve como base para estudos</h2>
+        <h1 class="main_title">Primeiro projeto</h1>
+        <h2 class="sub_title">Esse projeto serve como base para estudos</h2>
     </div>
     <a href="#">Saiba mais</a>
 </section>
-<div>
-    
-</div>
+<section class="section_explanatory">
+    <h2 class="title_section">Hercules Beetle</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    <div class="divisor"></div>
+    <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
+</section>
 </body>
 </html>
