--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Luang</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
 <header class="header">
@@ -15,8 +16,8 @@
     </ul>
 </header>
 <section class="banner_main">
-    <img src="./assets/img/forest.jpg" alt="">
-    <div id="box-banner" class="box-banner">
+    <img src="./assets/img/forest.jpg" alt=""> 
+     <div id="box-banner" class="box-banner">
         <h1 class="main_title">Primeiro projeto</h1>
         <h2 class="sub_title">Esse projeto serve como base para estudos</h2>
     </div>
