--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
     </ul>
 </header>
 <section class="banner_main">
-    <img src="./assets/img/forest.jpg" alt=""> 
-     <div id="box-banner" class="box-banner">
+    <div class="img-wrapper">
+        <img src="./assets/img/forest.jpg" alt=""> 
+    </div>
+    <div id="box-banner" class="box-banner">
         <h1 class="main_title">Primeiro projeto</h1>
         <h2 class="sub_title">Esse projeto serve como base para estudos</h2>
+        <a href="#">Saiba mais</a>
     </div>
-    <a href="#">Saiba mais</a>
 </section>
 <section class="section_explanatory">
-    <h2 class="title_section">Hercules Beetle</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    <div class="text-wrapper">
+        <h2 class="title_section">Hercules Beetle</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    </div>
     <div class="divisor"></div>
     <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
 </section>
