atualiza com javascript

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 <section class="banner_main">
     <div class="img-wrapper">
-        <img src="./assets/img/forest.jpg" alt=""> 
+        <img src="./assets/img/forest.jpg" alt="" class="banner-img"> 
     </div>
     <div id="box-banner" class="box-banner">
         <h1 class="main_title">Primeiro projeto</h1>
@@ -33,5 +33,31 @@
     <div class="divisor"></div>
     <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
 </section>
+<section class="section_explanatory">
+    <div class="text-wrapper">
+        <h2 class="title_section">Hercules Beetle</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    </div>
+    <div class="divisor"></div>
+    <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
+</section>
+<section class="section_explanatory">
+    <div class="text-wrapper">
+        <h2 class="title_section">Hercules Beetle</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    </div>
+    <div class="divisor"></div>
+    <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
+</section>
+<section class="section_explanatory">
+    <div class="text-wrapper">
+        <h2 class="title_section">Hercules Beetle</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae accusamus reprehenderit incidunt dolores hic numquam magni impedit molestiae, earum tempore dolore ea commodi aperiam modi dignissimos cumque quis id.</p>
+    </div>
+    <div class="divisor"></div>
+    <img class="section_img" src="./assets/img/Hercules_Beetle.png" alt="besouro">
+</section>
+
+<script src="./assets/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
